--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -193,10 +193,9 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="269"/>
-        <CursorPos X="60" Y="290"/>
+        <TopLine Value="2218"/>
+        <CursorPos Y="2243"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -259,7 +258,7 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="29"/>
         <TopLine Value="133"/>
-        <CursorPos Y="157"/>
+        <CursorPos Y="154"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -278,8 +277,8 @@
         <Filename Value="PCRE.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="88"/>
-        <CursorPos X="5" Y="98"/>
+        <TopLine Value="1141"/>
+        <CursorPos Y="1162"/>
         <UsageCount Value="208"/>
         <Loaded Value="True"/>
       </Unit10>
@@ -323,9 +322,10 @@
         <ComponentName Value="FrmEscolherVerseRules"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="33"/>
-        <TopLine Value="59"/>
-        <CursorPos X="21" Y="71"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="37"/>
+        <CursorPos X="40" Y="54"/>
         <UsageCount Value="228"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -333,7 +333,7 @@
       <Unit15>
         <Filename Value="twAutomate.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="35"/>
+        <EditorIndex Value="34"/>
         <TopLine Value="13"/>
         <CursorPos X="8" Y="27"/>
         <UsageCount Value="232"/>
@@ -343,7 +343,7 @@
         <Filename Value="twsyncthread.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="twSyncThread"/>
-        <EditorIndex Value="34"/>
+        <EditorIndex Value="33"/>
         <TopLine Value="27"/>
         <CursorPos X="50" Y="47"/>
         <UsageCount Value="212"/>
@@ -414,7 +414,7 @@
         <Filename Value="chapterview.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ChapterView"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="6"/>
         <TopLine Value="286"/>
         <CursorPos X="48" Y="301"/>
         <FoldState Value=" T0pN8V1"/>
@@ -431,7 +431,7 @@
       </Unit24>
       <Unit25>
         <Filename Value="C:\Users\rubio\AppData\Local\lazarus\onlinepackagemanager\packages\kcontrols\source\kmemo.pas"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="3717"/>
         <CursorPos Y="3735"/>
         <UsageCount Value="100"/>
@@ -574,9 +574,9 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formInterlinearVerseRules"/>
         <EditorIndex Value="15"/>
-        <TopLine Value="13"/>
-        <CursorPos X="14" Y="30"/>
-        <UsageCount Value="198"/>
+        <TopLine Value="47"/>
+        <CursorPos X="3" Y="47"/>
+        <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit41>
@@ -586,7 +586,7 @@
         <EditorIndex Value="23"/>
         <TopLine Value="36"/>
         <CursorPos X="3" Y="55"/>
-        <UsageCount Value="73"/>
+        <UsageCount Value="74"/>
         <Loaded Value="True"/>
       </Unit42>
       <Unit43>
@@ -602,7 +602,7 @@
         <EditorIndex Value="8"/>
         <TopLine Value="271"/>
         <CursorPos X="11" Y="298"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="62"/>
         <Loaded Value="True"/>
       </Unit44>
       <Unit45>
@@ -611,7 +611,7 @@
         <EditorIndex Value="9"/>
         <TopLine Value="149"/>
         <CursorPos Y="179"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="62"/>
         <Loaded Value="True"/>
       </Unit45>
       <Unit46>
@@ -638,11 +638,10 @@
       </Unit48>
       <Unit49>
         <Filename Value="C:\Users\rubio\AppData\Local\lazarus\onlinepackagemanager\packages\kcontrols\source\kgraphics.pas"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="84"/>
         <CursorPos X="3" Y="141"/>
         <UsageCount Value="56"/>
-        <Loaded Value="True"/>
       </Unit49>
       <Unit50>
         <Filename Value="syntagm.pas"/>
@@ -650,7 +649,7 @@
         <EditorIndex Value="18"/>
         <TopLine Value="384"/>
         <CursorPos X="10" Y="398"/>
-        <UsageCount Value="53"/>
+        <UsageCount Value="54"/>
         <Loaded Value="True"/>
       </Unit50>
       <Unit51>
@@ -670,134 +669,142 @@
       <Unit53>
         <Filename Value="C:\tools\lazarus\lcl\dialogs.pp"/>
         <UnitName Value="Dialogs"/>
-        <EditorIndex Value="36"/>
+        <EditorIndex Value="35"/>
         <TopLine Value="683"/>
         <CursorPos X="72" Y="700"/>
-        <UsageCount Value="48"/>
+        <UsageCount Value="49"/>
         <Loaded Value="True"/>
       </Unit53>
       <Unit54>
         <Filename Value="C:\tools\lazarus\components\lazutils\uitypes.pas"/>
         <UnitName Value="UITypes"/>
-        <EditorIndex Value="37"/>
+        <EditorIndex Value="36"/>
         <CursorPos X="3" Y="18"/>
-        <UsageCount Value="48"/>
+        <UsageCount Value="49"/>
         <Loaded Value="True"/>
       </Unit54>
     </Units>
-    <JumpHistory Count="28" HistoryIndex="27">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="914" TopLine="897"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1162" TopLine="1141"/>
       </Position1>
       <Position2>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="917" TopLine="897"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1292" TopLine="1275"/>
       </Position2>
       <Position3>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="920" TopLine="897"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1294" TopLine="1275"/>
       </Position3>
       <Position4>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="922" TopLine="897"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1295" TopLine="1275"/>
       </Position4>
       <Position5>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="925" TopLine="897"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1294" TopLine="1275"/>
       </Position5>
       <Position6>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="927" TopLine="903"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1296" TopLine="1275"/>
       </Position6>
       <Position7>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="928" TopLine="903"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1294" TopLine="1275"/>
       </Position7>
       <Position8>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="930" TopLine="903"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1296" TopLine="1275"/>
       </Position8>
       <Position9>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="931" TopLine="909"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1300" TopLine="1283"/>
       </Position9>
       <Position10>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="933" TopLine="909"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1302" TopLine="1283"/>
       </Position10>
       <Position11>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="931" TopLine="909"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1303" TopLine="1283"/>
       </Position11>
       <Position12>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="933" TopLine="909"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1302" TopLine="1283"/>
       </Position12>
       <Position13>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="931" TopLine="909"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1304" TopLine="1283"/>
       </Position13>
       <Position14>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="903" Column="16" TopLine="884"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1302" TopLine="1283"/>
       </Position14>
       <Position15>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="976" Column="29" TopLine="964"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1304" TopLine="1283"/>
       </Position15>
       <Position16>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="56" Column="19" TopLine="41"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1158" TopLine="1141"/>
       </Position16>
       <Position17>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="976" Column="29" TopLine="948"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1160" TopLine="1141"/>
       </Position17>
       <Position18>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1033" TopLine="1016"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1161" TopLine="1141"/>
       </Position18>
       <Position19>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="194" Column="14" TopLine="179"/>
+        <Filename Value="PCRE.pas"/>
+        <Caret Line="1162" TopLine="1141"/>
       </Position19>
       <Position20>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2286" TopLine="2267"/>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="57" Column="69" TopLine="40"/>
       </Position20>
       <Position21>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="976" Column="29" TopLine="951"/>
+        <Filename Value="formpropprojeto.pas"/>
+        <Caret Line="139" Column="31" TopLine="133"/>
       </Position21>
       <Position22>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1403" Column="6" TopLine="1373"/>
+        <Filename Value="forminterlinearverserules.pas"/>
+        <Caret Line="29" Column="21" TopLine="13"/>
       </Position22>
       <Position23>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="217" Column="74" TopLine="193"/>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="63" Column="69" TopLine="41"/>
       </Position23>
       <Position24>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="979" TopLine="962"/>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="46" Column="16" TopLine="41"/>
       </Position24>
       <Position25>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="980" TopLine="962"/>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="47" Column="16" TopLine="42"/>
       </Position25>
       <Position26>
-        <Filename Value="chapterview.pas"/>
-        <Caret Line="276" Column="15" TopLine="249"/>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="54" Column="16" TopLine="44"/>
       </Position26>
       <Position27>
-        <Filename Value="chapterview.pas"/>
-        <Caret Line="313" Column="48" TopLine="325"/>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="55" Column="20" TopLine="43"/>
       </Position27>
       <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2226" Column="50" TopLine="2215"/>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="58" TopLine="44"/>
       </Position28>
+      <Position29>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="55" TopLine="43"/>
+      </Position29>
+      <Position30>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="62" Column="46" TopLine="43"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -826,7 +833,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="6">
+    <BreakPoints Count="5">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -859,16 +866,9 @@
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
-        <Source Value="formpropprojeto.pas"/>
-        <Line Value="155"/>
-      </Item5>
-      <Item6>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
         <Source Value="versiculo.pas"/>
         <Line Value="979"/>
-      </Item6>
+      </Item5>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
