--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -165,6 +165,7 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
         <TopLine Value="1172"/>
         <CursorPos Y="1193"/>
@@ -193,10 +194,9 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="368"/>
-        <CursorPos Y="397"/>
+        <TopLine Value="417"/>
+        <CursorPos Y="433"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -687,123 +687,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1295" TopLine="1275"/>
+        <Caret Line="1294" TopLine="1275"/>
       </Position1>
       <Position2>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1294" TopLine="1275"/>
+        <Caret Line="1296" TopLine="1275"/>
       </Position2>
       <Position3>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1296" TopLine="1275"/>
+        <Caret Line="1294" TopLine="1275"/>
       </Position3>
       <Position4>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1294" TopLine="1275"/>
+        <Caret Line="1296" TopLine="1275"/>
       </Position4>
       <Position5>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1296" TopLine="1275"/>
+        <Caret Line="1300" TopLine="1283"/>
       </Position5>
       <Position6>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1300" TopLine="1283"/>
+        <Caret Line="1302" TopLine="1283"/>
       </Position6>
       <Position7>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1302" TopLine="1283"/>
+        <Caret Line="1303" TopLine="1283"/>
       </Position7>
       <Position8>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1303" TopLine="1283"/>
+        <Caret Line="1302" TopLine="1283"/>
       </Position8>
       <Position9>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1302" TopLine="1283"/>
+        <Caret Line="1304" TopLine="1283"/>
       </Position9>
       <Position10>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1304" TopLine="1283"/>
+        <Caret Line="1302" TopLine="1283"/>
       </Position10>
       <Position11>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1302" TopLine="1283"/>
+        <Caret Line="1304" TopLine="1283"/>
       </Position11>
       <Position12>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1304" TopLine="1283"/>
+        <Caret Line="1158" TopLine="1141"/>
       </Position12>
       <Position13>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1158" TopLine="1141"/>
+        <Caret Line="1160" TopLine="1141"/>
       </Position13>
       <Position14>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1160" TopLine="1141"/>
+        <Caret Line="1161" TopLine="1141"/>
       </Position14>
       <Position15>
         <Filename Value="PCRE.pas"/>
-        <Caret Line="1161" TopLine="1141"/>
+        <Caret Line="1162" TopLine="1141"/>
       </Position15>
       <Position16>
-        <Filename Value="PCRE.pas"/>
-        <Caret Line="1162" TopLine="1141"/>
-      </Position16>
-      <Position17>
         <Filename Value="formverserules.pas"/>
         <Caret Line="57" Column="69" TopLine="40"/>
-      </Position17>
-      <Position18>
+      </Position16>
+      <Position17>
         <Filename Value="formpropprojeto.pas"/>
         <Caret Line="139" Column="31" TopLine="133"/>
-      </Position18>
-      <Position19>
+      </Position17>
+      <Position18>
         <Filename Value="forminterlinearverserules.pas"/>
         <Caret Line="29" Column="21" TopLine="13"/>
+      </Position18>
+      <Position19>
+        <Filename Value="formverserules.pas"/>
+        <Caret Line="63" Column="69" TopLine="41"/>
       </Position19>
       <Position20>
         <Filename Value="formverserules.pas"/>
-        <Caret Line="63" Column="69" TopLine="41"/>
+        <Caret Line="46" Column="16" TopLine="41"/>
       </Position20>
       <Position21>
         <Filename Value="formverserules.pas"/>
-        <Caret Line="46" Column="16" TopLine="41"/>
+        <Caret Line="47" Column="16" TopLine="42"/>
       </Position21>
       <Position22>
         <Filename Value="formverserules.pas"/>
-        <Caret Line="47" Column="16" TopLine="42"/>
+        <Caret Line="54" Column="16" TopLine="44"/>
       </Position22>
       <Position23>
         <Filename Value="formverserules.pas"/>
-        <Caret Line="54" Column="16" TopLine="44"/>
+        <Caret Line="55" Column="20" TopLine="43"/>
       </Position23>
       <Position24>
         <Filename Value="formverserules.pas"/>
-        <Caret Line="55" Column="20" TopLine="43"/>
+        <Caret Line="58" TopLine="44"/>
       </Position24>
       <Position25>
         <Filename Value="formverserules.pas"/>
-        <Caret Line="58" TopLine="44"/>
+        <Caret Line="55" TopLine="43"/>
       </Position25>
       <Position26>
         <Filename Value="formverserules.pas"/>
-        <Caret Line="55" TopLine="43"/>
+        <Caret Line="62" Column="46" TopLine="43"/>
       </Position26>
       <Position27>
-        <Filename Value="formverserules.pas"/>
-        <Caret Line="62" Column="46" TopLine="43"/>
-      </Position27>
-      <Position28>
         <Filename Value="bibletreeview.pas"/>
         <Caret Line="30" Column="21" TopLine="15"/>
+      </Position27>
+      <Position28>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="2243" TopLine="2218"/>
       </Position28>
       <Position29>
         <Filename Value="projeto.pas"/>
-        <Caret Line="2243" TopLine="2218"/>
+        <Caret Line="125" Column="15" TopLine="109"/>
       </Position29>
       <Position30>
         <Filename Value="projeto.pas"/>
-        <Caret Line="125" Column="15" TopLine="109"/>
+        <Caret Line="397" TopLine="368"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -833,7 +833,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="5">
+    <BreakPoints Count="4">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -852,23 +852,16 @@
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
-        <Source Value="projeto.pas"/>
-        <Line Value="433"/>
+        <Source Value="versiculo.pas"/>
+        <Line Value="1324"/>
       </Item3>
       <Item4>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="versiculo.pas"/>
-        <Line Value="1324"/>
-      </Item4>
-      <Item5>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="versiculo.pas"/>
         <Line Value="979"/>
-      </Item5>
+      </Item4>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
